--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">JetpackComposeDemo</string>
+    <string name="user_icon_content_description">User</string>
+    <string name="settings_icon_content_description">Settings</string>
 </resources>
