--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">JetpackComposeSpotifyUI</string>
-    <string name="user_icon_content_description">User</string>
-    <string name="settings_icon_content_description">Settings</string>
+    <string name="user">User</string>
+    <string name="settings">Settings</string>
     <string name="hey">Hey</string>
     <string name="want_new_playlists">Want new playlists? Pick some music you like.</string>
     <string name="not_now">Not Now</string>
