Finished with the header of the search screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="listen_anywhere">Listen anywhere, even offline.</string>
     <string name="terms_and_conditions">Terms and Conditions apply. Learn more</string>
     <string name="heres_what_you_get">Here\'s what you get:</string>
+    <string name="search_placeholder">Artist, song, or playlist</string>
 </resources>
