--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="terms_and_conditions">Terms and Conditions apply. Learn more</string>
     <string name="heres_what_you_get">Here\'s what you get:</string>
     <string name="search_placeholder">Artist, song, or playlist</string>
+    <string name="create">Create</string>
 </resources>
